# test-nebus

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docs/: openapi.json
docs/sources/: classes.drawio  entity.drawio
i_docker/: api.dockerfile  pgbouncer.dockerfile  pgbouncer.ini
migration/: env.py
migration/versions/: 2025-02-09_add_phone.py  2025-02-09_init.py
src/api/: bootstrap.py  dependencies.py  main.py
src/api/config/: settings.py
src/api/exceptoins/: base.py
src/api/operations/: base.py
src/api/operations/ogranizations/: find.py
src/api/routers/: operations.py
src/api/schemas/: base.py
src/api/security/: security.py
src/api/utils/: openapi.py  query_parser.py
src/shared/config/: settings.py
src/shared/database/: base.py  org_aggregate.py
src/shared/models/: office.py  organization.py  work.py
src/shared/queries/: base.py  organization.py
src/shared/schemas/: organization.py
src/shared/tests/: conftest.py
src/shared/tests/integrations/: conftest.py  test_database.py  test_org_aggregate.py  test_queries.py
src/shared/tests/unit/: conftest.py  test_query_buider.py
src/stream/: bootstrap.py
